# flask_chat_AI

./: .gitignore  README.md  app.py  package-lock.json  package.json  postcss.config.mjs  pyproject.toml
static/src/css/: input.css
templates/: index.html
